<resources>
    <string name="app_name">UsageLog</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_new_users">New Users</string>
    <string name="title_activity_add_user">Add user</string>
    <string name="txt_data_user">Dados do usuário</string>
    <string name="password">Senha</string>
    <string name="user">Usuário</string>
    <string name="btn_limpar">Limpar</string>
    <string name="btn_salvar">Salvar</string>
</resources>
