<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.qualcom.inatel.usagelog.view.user.add_user">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_user"
        android:labelFor="@string/user"
        android:layout_gravity="bottom"
        android:layout_below="@+id/text_user"
        android:layout_alignLeft="@+id/text_password"
        android:layout_alignStart="@+id/text_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_password"
        android:autoText="false"
        android:labelFor="@string/password"
        android:layout_gravity="bottom"
        android:layout_below="@+id/text_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        android:id="@+id/btn_save"
        android:layout_gravity="bottom"
        android:layout_alignTop="@+id/btn_clear"
        android:layout_alignRight="@+id/edit_password"
        android:layout_alignEnd="@+id/edit_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpar"
        android:id="@+id/btn_clear"
        android:layout_gravity="bottom"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/edit_password"
        android:layout_alignStart="@+id/edit_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/text_user"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/edit_user"
        android:layout_alignStart="@+id/edit_user"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/text_password"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_gravity="bottom"
        android:layout_below="@+id/edit_user"
        android:layout_alignLeft="@+id/edit_password"
        android:layout_alignStart="@+id/edit_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_data_user"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/text_user"
        android:layout_alignStart="@+id/text_user"
        android:textSize="@dimen/abc_text_size_title_material" />

</RelativeLayout>
